--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
       <div class="col">
 
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://www.stanley1913.com/cdn/shop/files/B2B_Web_PNG-The-Quencher-H2-O-FlowState-Tumbler-30OZ-Heather-Front.png?v=1704227518&width=540" class="card-img-top" alt="...">
           <div class="card-body">
+
             <header>
             <h2 class="card-title">Blue</h2>
             </header>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">All glossed up in bright blue for snowflake season, the 40-ounce Quencher H2.0 FlowState™ Tumbler welcomes the new year. Gift to your favorite Capricorn — grab one for you — and share feel-good hydration with your friends.</p>
+            <p calss="availability"> Available</p>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">An item</li>
@@ -31,13 +33,15 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://www.stanley1913.com/cdn/shop/files/B2B_Web_PNG-The-Quencher-H2-O-FlowState-Tumbler-40OZ-Blush-Gloss-Deco_7f537ce9-9465-42b5-b112-b170a05df9de.png?v=1704919423&width=540" class="card-img-top" alt="...">
           <div class="card-body">
+
             <header>
             <h2 class="card-title">Red</h2>
           </header>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">This travel tumbler is just what you need for all-day hydration. Take it with you to a high-intensity workout or on an extra-long commute to keep your drink cold for hours. The lid features a rotating cover with three positions: a straw opening, a wide mouth for drinking, and a full-cover top to prevent spills. The larger size even fits comfortably in your vehicle’s cup holder and comes with a rugged handle for carrying.</p>
           </div>
+          <p  class="Availability"> Available</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">An item</li>
             <li class="list-group-item">A second item</li>
@@ -51,12 +55,14 @@
       </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://www.stanley1913.com/cdn/shop/files/B2B_Web_PNG-The-Quencher-H2-O-FlowState-Tumbler-40OZ-Rose-Quartz-Glow-Front.png?v=1704934649&width=540" class="card-img-top" alt="...">
           <div class="card-body">
+
           <header>
             <h2 class="card-title">Yellow</h2>
           </header>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">These bold, colorful tumblers are made to keep you hydrated in a fully functional style. Ideal for car commutes or workouts at home, it has a built-in flip straw for easy and effortless sipping.</p>
+            <p class="availability"> Available</p>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">An item</li>
@@ -69,12 +75,14 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://www.stanley1913.com/cdn/shop/files/B2B_Web_PNG-The-Quencher-H2-O-FlowState-Tumbler-20OZ-Black-Tonal-Front_db1c8985-c740-4b17-83a6-d601cdfc1975.png?v=1704936719&width=540" class="card-img-top" alt="...">
           <div class="card-body">
+
           <header>
-            <h2 class="card-title">Green</h2>
+            <h2 class="card-title">Black</h2>
           </header>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Super versatile and perfectly sized, our 20 oz Quencher H2.0 fits in anywhere: deskside, bedside, cup holder and next to your yoga mat. Fill it with ice-cold water or your favorite iced coffee or fruit smoothie. The double-wall vacuum insulation will keep things cold for 8 hours and iced for 30 hours.</p>
+            <p class="availability">Available</p>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">An item</li>
@@ -89,13 +97,15 @@
       </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://www.stanley1913.com/cdn/shop/files/B2B_Web_PNG-The-Quencher-H2-O-FlowState-Tumbler-40OZ-Arctic-Twist-Front.png?v=1703027940&width=900" class="card-img-top" alt="...">
           <div class="card-body">
 
           <header>
             <h2 class="card-title">Orange</h2>
           </header>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Treat yourself to trendsetting, all-day hydration with our Quencher H2.0 in Soft Matte. The grippable silicone finish offers a stylish, sophisticated look and a velvety feel. Yet it’s dishwasher safe with all the durability you count on from Stanley. Beneath the unique Soft Matte finish is recycled stainless steel construction and double-wall vacuum insulation.</p>
+            <p call="availability"> Available</p>
+
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">An item</li>
@@ -108,13 +118,14 @@
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://www.stanley1913.com/cdn/shop/files/B2B_Web_PNG-The-Quencher-H2-O-FlowState-Tumbler-30OZ-Shale-Soft-Matte-Front.png?v=1697144965&width=540" class="card-img-top" alt="...">
           <div class="card-body">
             
           <header>
             <h2 class="card-title">Pink</h2>
           </header>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">This Quencher H2.0 is generously sized (but not oversized) with an easy-carry, comfort-grip handle and a narrow base that will fit most cup holders. Long day of meetings? Rowing class? Trip out of town? Our durable 30 oz tumbler, made with recycled stainless steel, is up to the hydration challenge. </p>
+            <p class="availability"> Available</p>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">An item</li>
