--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
             <p class="card-text">All glossed up in bright blue for snowflake season, the 40-ounce Quencher H2.0 FlowState™ Tumbler welcomes the new year. Gift to your favorite Capricorn — grab one for you — and share feel-good hydration with your friends.</p>
             <p calss="availability"> Available</p>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
+          <header>
+            <h4>Specifications</h4>
+          </header>
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+            <li class="list-group-item">30oz</li>
+            <li class="list-group-item">3lbs</li>
+            </ul>
+            <footer class="foot">
+              Void when broken
+            </footer>
+            </div>
           </ul>
           <div class="card-body">
             <a href="#" class="card-link">Card link</a>
@@ -41,12 +49,18 @@
           </header>
             <p class="card-text">This travel tumbler is just what you need for all-day hydration. Take it with you to a high-intensity workout or on an extra-long commute to keep your drink cold for hours. The lid features a rotating cover with three positions: a straw opening, a wide mouth for drinking, and a full-cover top to prevent spills. The larger size even fits comfortably in your vehicle’s cup holder and comes with a rugged handle for carrying.</p>
           </div>
-          <p  class="Availability"> Available</p>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
+          <header>
+            <h4>Specifications</h4>
+          </header>
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+            <li class="list-group-item">30oz</li>
+            <li class="list-group-item">3lbs</li>
+            </ul>
+            <footer class="foot">
+              Void when broken
+            </footer>
+            </div>
           <div class="card-body">
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
@@ -64,11 +78,18 @@
             <p class="card-text">These bold, colorful tumblers are made to keep you hydrated in a fully functional style. Ideal for car commutes or workouts at home, it has a built-in flip straw for easy and effortless sipping.</p>
             <p class="availability"> Available</p>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
+          <header>
+            <h4>Specifications</h4>
+          </header>
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+            <li class="list-group-item">30oz</li>
+            <li class="list-group-item">3lbs</li>
+            </ul>
+            <footer class="foot">
+              Void when broken
+            </footer>
+            </div>
           <div class="card-body">
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
@@ -84,11 +105,18 @@
             <p class="card-text">Super versatile and perfectly sized, our 20 oz Quencher H2.0 fits in anywhere: deskside, bedside, cup holder and next to your yoga mat. Fill it with ice-cold water or your favorite iced coffee or fruit smoothie. The double-wall vacuum insulation will keep things cold for 8 hours and iced for 30 hours.</p>
             <p class="availability">Available</p>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
+          <header>
+            <h4>Specifications</h4>
+          </header>
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+            <li class="list-group-item">30oz</li>
+            <li class="list-group-item">3lbs</li>
+            </ul>
+            <footer class="foot">
+              Void when broken
+            </footer>
+            </div>
           <div class="card-body">
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
@@ -107,11 +135,18 @@
             <p call="availability"> Available</p>
 
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
+          <header>
+            <h4>Specifications</h4>
+          </header>
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+            <li class="list-group-item">30oz</li>
+            <li class="list-group-item">3lbs</li>
+            </ul>
+            <footer class="foot">
+              Void when broken
+            </footer>
+            </div>
           <div class="card-body">
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
@@ -127,12 +162,23 @@
             <p class="card-text">This Quencher H2.0 is generously sized (but not oversized) with an easy-carry, comfort-grip handle and a narrow base that will fit most cup holders. Long day of meetings? Rowing class? Trip out of town? Our durable 30 oz tumbler, made with recycled stainless steel, is up to the hydration challenge. </p>
             <p class="availability"> Available</p>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
+          <header>
+            <h4>Specifications</h4>
+          </header>
+          <div>
+          
+          </div>
           <div class="card-body">
+            <ul class="list-group list-group-flush">
+            <li class="list-group-item">30oz</li>
+            <li class="list-group-item">3lbs</li>
+            </ul>
+            <footer class="foot">
+              Void when broken
+            </footer>
+          </div>
+          <div class="card-body">
+            
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
           </div>
