--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2 class="card-title">Blue</h2>
             </header>
             <p class="card-text">All glossed up in bright blue for snowflake season, the 40-ounce Quencher H2.0 FlowState™ Tumbler welcomes the new year. Gift to your favorite Capricorn — grab one for you — and share feel-good hydration with your friends.</p>
-            <p calss="availability"> Available</p>
+            <p class="availability"> Available</p>
           </div>
           <header>
             <h4>Specifications</h4>
@@ -36,8 +36,11 @@
             </div>
           </ul>
           <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <header class="Price">Price</header>
+            <li class="pricing"> $30 for 1</li>
+            <li class="pricing"> $55 for 2</li>
+            <li class="pricing"> $80 for 3</li>
+            
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -62,8 +65,10 @@
             </footer>
             </div>
           <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <header class="Price">Price</header>
+            <li class="pricing"> $30 for 1</li>
+            <li class="pricing"> $55 for 2</li>
+            <li class="pricing"> $80 for 3</li>
           </div>
         </div>
       </div>
@@ -91,8 +96,10 @@
             </footer>
             </div>
           <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <header class="Price">Price</header>
+            <li class="pricing"> $30 for 1</li>
+            <li class="pricing"> $55 for 2</li>
+            <li class="pricing"> $80 for 3</li>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -118,8 +125,10 @@
             </footer>
             </div>
           <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <header class="Price">Price</header>
+            <li class="pricing"> $30 for 1</li>
+            <li class="pricing"> $55 for 2</li>
+            <li class="pricing"> $80 for 3</li>
           </div>
         </div>
       </div>
@@ -148,8 +157,10 @@
             </footer>
             </div>
           <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <header class="Price">Price</header>
+            <li class="pricing"> $30 for 1</li>
+            <li class="pricing"> $55 for 2</li>
+            <li class="pricing"> $80 for 3</li>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -178,9 +189,10 @@
             </footer>
           </div>
           <div class="card-body">
-            
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <header class="Price">Price</header>
+            <li class="pricing"> $30 for 1</li>
+            <li class="pricing"> $55 for 2</li>
+            <li class="pricing"> $80 for 3</li>
           </div>
         </div>
       </div>
