--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p class="availability"> Available</p>
           </div>
           <header>
-            <h4>Specifications</h4>
+            <h4 class="specs">Specifications</h4>
           </header>
           <div class="card-body">
             <ul class="list-group list-group-flush">
@@ -53,7 +53,7 @@
             <p class="card-text">This travel tumbler is just what you need for all-day hydration. Take it with you to a high-intensity workout or on an extra-long commute to keep your drink cold for hours. The lid features a rotating cover with three positions: a straw opening, a wide mouth for drinking, and a full-cover top to prevent spills. The larger size even fits comfortably in your vehicle’s cup holder and comes with a rugged handle for carrying.</p>
           </div>
           <header>
-            <h4>Specifications</h4>
+            <h4 class="specs">Specifications</h4>
           </header>
           <div class="card-body">
             <ul class="list-group list-group-flush">
@@ -84,7 +84,7 @@
             <p class="availability"> Available</p>
           </div>
           <header>
-            <h4>Specifications</h4>
+            <h4 class="specs">Specifications</h4>
           </header>
           <div class="card-body">
             <ul class="list-group list-group-flush">
@@ -113,7 +113,7 @@
             <p class="availability">Available</p>
           </div>
           <header>
-            <h4>Specifications</h4>
+            <h4 class="specs">Specifications</h4>
           </header>
           <div class="card-body">
             <ul class="list-group list-group-flush">
@@ -145,7 +145,7 @@
 
           </div>
           <header>
-            <h4>Specifications</h4>
+            <h4 class="specs">Specifications</h4>
           </header>
           <div class="card-body">
             <ul class="list-group list-group-flush">
@@ -174,7 +174,7 @@
             <p class="availability"> Available</p>
           </div>
           <header>
-            <h4>Specifications</h4>
+            <h4 class="specs">Specifications</h4>
           </header>
           <div>
           
