--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
     <div class="row">
       <div class="col">
 
-        <div class="card" style="width: 18rem;">
-          <img src="https://www.stanley1913.com/cdn/shop/files/B2B_Web_PNG-The-Quencher-H2-O-FlowState-Tumbler-30OZ-Heather-Front.png?v=1704227518&width=540" class="card-img-top" alt="...">
+        <div class="card"  style="width: 18rem;">
+          
+          <img class="tmbl" src="https://www.stanley1913.com/cdn/shop/files/B2B_Web_PNG-The-Quencher-H2-O-FlowState-Tumbler-30OZ-Heather-Front.png?v=1704227518&width=540" class="card-img-top" alt="...">
+          
+          <img class="out" src="https://raw.githubusercontent.com/morecallan/css102-e6/master/images/soldOut.png">
           <div class="card-body">
 
             <header>
-            <h2 class="card-title">Blue</h2>
+            <h2  class="card-title sold">Blue</h2>
             </header>
             <p class="card-text">All glossed up in bright blue for snowflake season, the 40-ounce Quencher H2.0 FlowState™ Tumbler welcomes the new year. Gift to your favorite Capricorn — grab one for you — and share feel-good hydration with your friends.</p>
             <p class="availability"> Available</p>
